# rag-project

./: .cruft.json  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
notebooks/: README.md
