[project]
name = "rag-project"
version = "0.1.0"
description = "rag project in progress"
authors = [
    "Rithic Kumar <rithic40@gmail.com>",
]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [

]

[project.urls]
documentation = "https://Rit-ctrl.github.io/rag-project"
repository = "https://github.com/Rit-ctrl/rag-project"


[dependency-groups]
dev = [
    "pre-commit>=4.1.0", # Code linting and formatting
    "pytest>=8.3.4", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.0.0",
    "cruft[pyproject]>=2.15.0",# Automated Cookiecutter template synchronization
]

#
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.28.1",
    "pymdown-extensions>=10.14.3",
]
#

[tool.uv]
package = false
default-groups = [
    "dev",
#
    "docs",
#
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
